[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/game-menu/playButton.png" type="Texture" id=1]
[ext_resource path="res://assets/game-menu/exitButton.png" type="Texture" id=2]
[ext_resource path="res://scenes/game-menu/Menu.gd" type="Script" id=3]
[ext_resource path="res://assets/game-menu/name-animation/Title_sprite_1.png" type="Texture" id=4]
[ext_resource path="res://assets/game-menu/name-animation/Title_sprite_2.png" type="Texture" id=5]
[ext_resource path="res://assets/game-menu/name-animation/Title_sprite_4.png" type="Texture" id=6]
[ext_resource path="res://assets/game-menu/name-animation/Title_sprite_3.png" type="Texture" id=7]
[ext_resource path="res://assets/game-menu/name-animation/Title_sprite_7.png" type="Texture" id=8]
[ext_resource path="res://assets/game-menu/name-animation/Title_sprite_5.png" type="Texture" id=9]
[ext_resource path="res://assets/game-menu/name-animation/Title_sprite_6.png" type="Texture" id=10]
[ext_resource path="res://assets/game-menu/HitmanCat LOGO.png" type="Texture" id=11]
[ext_resource path="res://assets/game-menu/MenuBackground.png" type="Texture" id=12]
[ext_resource path="res://assets/game-menu/creditsButton.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 8 ) ],
"loop": true,
"name": "change-name",
"speed": 3.0
} ]

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 12 )

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 636.0
margin_top = 480.0
margin_right = 1214.0
margin_bottom = 913.0
texture_normal = ExtResource( 1 )

[node name="CreditsButton" type="TextureButton" parent="."]
margin_left = 1208.0
margin_top = 661.0
margin_right = 1681.0
margin_bottom = 1033.0
texture_normal = ExtResource( 13 )

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 1624.0
margin_top = 523.0
margin_right = 1883.0
margin_bottom = 704.0
texture_normal = ExtResource( 2 )

[node name="Name" type="AnimatedSprite" parent="."]
position = Vector2( 971, 268 )
frames = SubResource( 1 )
animation = "change-name"
frame = 5
playing = true

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 194, 917 )
scale = Vector2( 0.116, 0.116 )
texture = ExtResource( 11 )

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
